Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65926

QML SignalTransition crashes if signal emitted from thread during object destruction

XMLWordPrintable

    • d36c21aa8f48aed7775a6a047197b6f6f9055430 (qt/tqtc-qtbase/5.15)

      If a QML StateMachine SignalTransition is connected to a signal from a QObject, and that object emits that signal from a QtConcurrent::run thread while in the object's destructor, then there is a crash in QSignalEventEmitter.

      I've attached a small example demonstrating the problem (it's a little more clear from the code)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            fabiankosmale Fabian Kosmale
            zcapalbo Zachary Capalbo
            Votes:
            3 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes